Add Responsive settings

--- a/style.css
+++ b/style.css
@@ -67,15 +67,9 @@ body {
     font-style: italic;
   }
  
-  /*
-  h4 {
-    text-align: left;
-    font-family: Arial, Helvetica, sans-serif;
+ //Responsive
+@media screen and (min-width: 780px) {
+  .full-width-img {
+  margin: auto;
+  width: 90%;
   }
-  */
-
-/*Forecast section*/
-  #forecast {
-    margin: 20px;
-  }
-  
