--- a/style.css
+++ b/style.css
@@ -69,8 +69,9 @@ body {
  
  //Responsive
 @media screen and (min-width: 780px) {
-  .full-width-img {
+  .container {
   margin: auto;
   width: 90%;
+  background-color: pink;
   overflow: hidden;
   }
