--- a/style.css
+++ b/style.css
@@ -68,10 +68,8 @@ body {
   }
  
  //Responsive
-@media screen and (min-width: 780px) {
-  .container {
-  margin: auto;
-  width: 90%;
-  background-color: pink;
-  overflow: hidden;
+  @media screen and (min-width: 780px) {
+  body {
+    background-color: lightblue;
+   }
   }
