--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
  
  //Responsive
   @media screen and (min-width: 780px) {
-  body {
-    background-color: lightblue;
+  h1 {
+    color: red;
    }
   }
